Crash on mm-base-manager:device_removed
I've seen a few crash reports from users with the following backtrace:
Thread 0(id: 1670) CRASHED [ SIGABRT@0x0000000000000000 ]
0x00007cc1f906ffb2 (libc.so.6 - raise.c: 51) raise
0x00007cc1f9071da0 (libc.so.6 - abort.c: 79) abort
0x00007cc1f96df0f2 (libglib-2.0.so.0 - gtestutils.c: 2936) g_assertion_message
0x00007cc1f96df150 (libglib-2.0.so.0 - gtestutils.c: 2962) g_assertion_message_expr
0x0000568a750462df (ModemManager - mm-base-manager.c: 239) device_removed
0x0000568a75045d35 (ModemManager - mm-base-manager.c: 303) device_added
0x0000568a75046e8a (ModemManager - mm-base-manager.c: 462) start_device_added_idle
0x00007cc1f96be1fc (libglib-2.0.so.0 - gmain.c: 3325) g_main_context_dispatch
0x00007cc1f96be506 (libglib-2.0.so.0 - gmain.c: 4119) g_main_context_iterate
0x00007cc1f96be755 (libglib-2.0.so.0 - gmain.c: 4317) g_main_loop_run
0x0000568a750423cd (ModemManager - main.c: 206) main
0x00007cc1f905bad3 (libc.so.6 - libc-start.c: 308) __libc_start_main
0x0000568a750421a9 (ModemManager) _start
0x00007ffd54e03677
I am not able to reproduce it on my devices since they seem to happen when using USB dongles
Edited by Andrew Lassalle